test/tasty/neg-false/src-2/TestDefaults_fail.scala
package tastytest

object TestDefaults {

  val defaults = new Defaults()() // error: not enough arguments for constructor
  assert(defaults.i = 33)
  assert(defaults.s = "foo")
  assert(defaults.b = false)

}
